test/files/neg/t7097.scala
object Test {
  Function.tupled((n:Int) => (m:Int) => n + m)
}
